# apps/auth-service/src/controller/auth.controller.ts
@@ -7,8 +7,10 @@ import {
   verifyOtp,
 } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
 import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 //Đăng ký người dùng mới
 export const userRegistration = async (
@@ -57,18 +59,69 @@ export const verifyUser = async (
     }
 
     await verifyOtp(email, otp, next);
-    const hashedPassword = await bcrypt.hash(password, 10)
-    
+    const hashedPassword = await bcrypt.hash(password, 10);
+
     const user = await prisma.users.create({
-      data: {name, email, password: hashedPassword}
-    })
+      data: { name, email, password: hashedPassword },
+    });
 
-    res
-      .status(201)
-      .json({
-        success: true, message: "User register successfully!"
-      })
+    res.status(201).json({
+      success: true,
+      message: "User register successfully!",
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
 
+//Đăng nhập người dùng
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+
+    if (!email || !password) {
+      return next(new ValidationError("Email and password are required!"));
+    }
+
+    const user = await prisma.users.findUnique({ where: { email } });
+
+    if (!user) return next(new AuthError("User doesn't exist!"));
+
+    // Verify password
+    const isMatch = await bcrypt.compare(password, user.password!);
+    if (!isMatch) {
+      return next(new AuthError("Invalid email or password!"));
+    }
+
+    // Generate access and refresh token
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      {
+        expiresIn: "15m",
+      }
+    );
+
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      {
+        expiresIn: "7d",
+      }
+    );
+
+    // Store the refresh and access token in an httpOnly secure cookie
+    setCookie(res, "refresh_token", refreshToken);
+    setCookie(res, "access_token", accessToken);
+
+    res.status(200).json({
+      message: "Login successfull",
+      user: { id: user.id, email: user.email, name: user.name },
+    });
   } catch (error) {
     return next(error);
   }
